# rhythmbox-remote

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  wscript
debian/: changelog  control  copyright
src/: Makefile.am  Makefile.in  lirc.vala  rhythmbox_remote.vala  thread_helper.c  thread_helper.h  thread_helper.vapi  wscript
src/interface/: org.freedesktop.DBus.xml  org.mpris.MediaPlayer2.rhythmbox.xml
